# rules_build_error

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  DEVEL.md  LICENSE  MODULE.bazel  README.md  execute_tests.sh  style_check.bash  validate_example.bash
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: CODEOWNERS
.github/actions/: setup.yml
.github/actions/fetch_integration_directories/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: _reusable_setup.yml  bazel-steward.yml  publish.yml  release.yml  release_prep.sh  tests.yml  unit-tests.yaml  unit-tests.yml
build_script/: BUILD.bazel  check_each_message.bash  check_emptiness.bash  conditionally_execute.bash  try_build.bash
bzl_internal/: general_build_actions.bzl
config_settings/: BUILD.bazel
development/cli/: common.bash  execute_integration_tests.bash  execute_tests.bash  execute_unit_tests.bash  style_check.bash  validate_example.bash
examples/: .bazelignore  .gitignore  MODULE.bazel  hermetic_cc_toolchain_bazel9.patch
examples/cc/: BUILD.bazel  compile_error.cpp  link_error.cpp
inline_src/: inline_src.bzl
lang/cc/: README.md  build_error.bzl  defs.bzl  inline_src.bzl
lang/private/: general_build_actions.bzl
lang/private/script/: BUILD.bazel  check_each_message.bash  check_emptiness.bash  try_build.bash
lang/rust/: build_error.bzl
matcher/: README.md  defs.bzl  match_condition.bzl  matcher.bzl
matcher/executable/: BUILD.bazel  contains_basic_regex.bash  contains_extended_regex.bash  has_substr.bash  has_substr_ignoring_case.bash
scripts/: common.bash  execute_tests.bash  style_check.bash  validate_example.bash
tests/cc/: utils.bzl
tests/cc/c_compile_error/: BUILD.bazel  c_compile_error.c
tests/cc/c_compile_error_matcher_using_select/: BUILD.bazel  c_compile_error.c
tests/cc/c_compile_error_options_with_space/: BUILD.bazel
tests/cc/c_compile_error_with_deps/: BUILD.bazel  c_compile_error.c  library.c  library.h
tests/cc/c_inline_src/: BUILD.bazel
tests/cc/c_link_error/: BUILD.bazel
tests/cc/c_link_error_with_deps/: BUILD.bazel
tests/cc/cpp_compile_error/: BUILD.bazel  cpp_compile_error.cpp
tests/cc/cpp_compile_error_defines_is_transitive/: BUILD.bazel  cpp_compile_error.cpp
tests/cc/cpp_compile_error_options_with_space/: BUILD.bazel  cpp_compile_error.cpp
tests/cc/cpp_compile_error_with_deps/: BUILD.bazel  cpp_compile_error.cpp  library.hpp
tests/cc/cpp_compile_error_with_local_defines/: BUILD.bazel  cpp_compile_error.cpp
tests/cc/cpp_inline_src/: BUILD.bazel
tests/cc/cpp_link_error/: BUILD.bazel  cpp_link_error.cpp
tests/cc/cpp_link_error_with_deps/: BUILD.bazel  library.hpp
tests/cc/cpp_successful_build/: BUILD.bazel
tests/cc/cpp_successful_build_with_deps/: BUILD.bazel  library.cpp
tests/cc/github_issues/145/: BUILD.bazel
tests/integration/: .gitignore
tests/integration/local_config_cc/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
tests/integration/local_config_cc_with_external_include_paths/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel
tests/integration/local_config_cc_with_external_include_paths/external_library/: BUILD.bazel  MODULE.bazel
tests/integration/local_config_cc_with_external_include_paths/external_library/include/foo/: bar.hpp
tests/unit/cc/: utils.bzl
tests/unit/cc/c_compile_error/: BUILD.bazel
tests/unit/cc/c_compile_error_matcher_using_select/: BUILD.bazel  c_compile_error.c
tests/unit/cc/c_compile_error_matcher_using_select_in_pattern/: BUILD.bazel
tests/unit/cc/c_compile_error_multiple_match_conditions/: BUILD.bazel  c_compile_error.c
tests/unit/cc/c_compile_error_multiple_matchers/: BUILD.bazel  c_compile_error.c
tests/unit/cc/c_compile_error_options_with_space/: BUILD.bazel  c_compile_error.c
tests/unit/cc/c_compile_error_with_deps/: BUILD.bazel  library.c
tests/unit/cc/c_inline_src/: BUILD.bazel
tests/unit/cc/c_link_error/: BUILD.bazel
tests/unit/cc/c_link_error_with_deps/: BUILD.bazel  c_link_error.c  library.h
tests/unit/cc/cpp_compile_error/: BUILD.bazel
tests/unit/cc/cpp_compile_error_defines_is_transitive/: BUILD.bazel
tests/unit/cc/cpp_compile_error_options_with_space/: BUILD.bazel
tests/unit/cc/cpp_compile_error_with_deps/: BUILD.bazel  library.cpp
tests/unit/cc/cpp_compile_error_with_includes/: BUILD.bazel  cpp_compile_error.cpp
tests/unit/cc/cpp_compile_error_with_local_defines/: BUILD.bazel
tests/unit/cc/cpp_inline_src/: BUILD.bazel
tests/unit/cc/cpp_link_error/: BUILD.bazel
tests/unit/cc/cpp_link_error_with_deps/: BUILD.bazel  cpp_link_error.cpp
tests/unit/cc/cpp_successful_build/: BUILD.bazel
tests/unit/cc/cpp_successful_build_with_deps/: BUILD.bazel  cpp_compile_error.cpp  library.hpp
