"""Test module for `rules_build_error`.
"""

module(
    name = "rules_build_error_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_build_error", version = "0.0.0")
local_path_override(
    module_name = "rules_build_error",
    path = "..",
)

# For testing utility
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

# Register LLVM toolchain for C/C++
bazel_dep(name = "toolchains_llvm", version = "0.10.3")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_versions = {
        "": "16.0.2",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
