"""Test module for `rules_build_error`.
"""

module(
    name = "rules_build_error_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_build_error", version = "0.0.0")
local_path_override(
    module_name = "rules_build_error",
    path = "..",
)

# For testing utility
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

# Register toolchain for C/C++

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.0.1",
    dev_dependency = True,
)

cc_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
)
