"""Test module for `rules_build_error`.
"""

module(
    name = "rules_build_error_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_build_error", version = "0.0.0")
local_path_override(
    module_name = "rules_build_error",
    path = "..",
)

# For testing utility
bazel_dep(name = "bazel_skylib", version = "1.6.1")

# Register toolchain for C/C++

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.0",
)

cc_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)
