load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(
    "@rules_build_error//lang/cc:defs.bzl",
    "cc_build_error",
    "cc_build_error_test",
)
load("@rules_build_error//matcher:defs.bzl", "matcher")

# `cc_build_error` targets are designed to build successfully
# only when the expected compilation or linking error occurs.

cc_build_error(
    name = "compile_error",
    src = "compile_error.cpp",
    compile_stderr = matcher.has_substr("Example compile error"),
)

cc_build_error(
    name = "link_error",
    src = "link_error.cpp",
    link_stderr = matcher.contains_basic_regex("Declared.*Undefined"),
)

build_test(
    name = "build_test",
    targets = [
        ":compile_error",
        ":link_error",
    ],
)

# `cc_build_error_test` is a test rule for `cc_build_error` that succeeds
# only when `cc_build_error` builds successfully,
# meaning the expected compilation or linking error occurs.

cc_build_error_test(
    name = "compile_error_test",
    src = "compile_error.cpp",
    compile_stderr = matcher.has_substr("Example compile error"),
)

cc_build_error_test(
    name = "link_error_test",
    src = "link_error.cpp",
    link_stderr = matcher.contains_basic_regex("Declared.*Undefined"),
)
