"""Collection of matcher executables

Each of the executable targets in this package must have a public visibility to allow the user to use it.
However, the users are not suppose to directly refer to their labels. That is, they're supposed to refer to them via `matcher`.
"""

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "contains_basic_regex",
    srcs = ["contains_basic_regex.bash"],
)

sh_binary(
    name = "contains_extended_regex",
    srcs = ["contains_extended_regex.bash"],
)

sh_binary(
    name = "has_substr",
    srcs = ["has_substr.bash"],
)
