"""Collection of matcher executables"""

package(
    default_visibility = ["//lang:__subpackages__"],
)

filegroup(
    name = "contains_basic_regex",
    srcs = ["contains_basic_regex.bash"],
)

filegroup(
    name = "contains_extended_regex",
    srcs = ["contains_extended_regex.bash"],
)

filegroup(
    name = "has_substr",
    srcs = ["has_substr.bash"],
)
