"""Scripts commonly used when validating build errors.
"""

package(
    default_visibility = ["//lang:__subpackages__"],
)

filegroup(
    name = "check_each_message",
    srcs = ["check_each_message.bash"],
)

filegroup(
    name = "check_emptiness",
    srcs = ["check_emptiness.bash"],
)

filegroup(
    name = "try_build",
    srcs = ["try_build.bash"],
)
