"""Scripts commonly used when validating build errors.
"""

package(
    default_visibility = ["//lang:__subpackages__"],
)

alias(
    name = "check_each_message",
    actual = "check_each_message.bash",
)

alias(
    name = "check_emptiness",
    actual = "check_emptiness.bash",
)

alias(
    name = "try_build",
    actual = "try_build.bash",
)
