"""Scripts commonly used when validating build errors.
"""

package(
    default_visibility = ["//lang:__subpackages__"],
)

filegroup(
    name = "check_each_message",
    srcs = ["check_each_message.bash"],
)

filegroup(
    name = "check_emptiness",
    srcs = ["check_emptiness.bash"],
)

filegroup(
    name = "try_build",
    srcs = ["try_build.bash"],
)

filegroup(
    name = "dummy_test",
    srcs = select({
        "@bazel_tools//src/conditions:host_windows": "dummy_test_windows.bat",
        "//conditions:default": "dummy_test.sh",
    }),
)
