load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//lang/cc:defs.bzl", "cc_build_error")
load("//matcher:defs.bzl", "matcher")

cc_build_error(
    name = "plain",
    src = "c_compile_error.c",
)

cc_build_error(
    name = "with_substr_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr("for c_compile_error.c"),
)

cc_build_error(
    name = "with_substr_matcher_ignoring_case",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr_ignoring_case("FOR c_compile_error.c"),
)

cc_build_error(
    name = "with_basic_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_basic_regex(r"for[[:space:]]c_compile_error\.\(c\|C\)"),
)

cc_build_error(
    name = "with_extended_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_extended_regex(r"for[[:space:]]c_compile_error\.(c|C)"),
)

build_test(
    name = "build_test",
    targets = [
        ":plain",
        ":with_substr_matcher",
        ":with_substr_matcher_ignoring_case",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)
