load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//matcher:defs.bzl", "matcher")
load("//tests/cc:utils.bzl", "check_build_and_test")

check_build_and_test(
    name = "plain",
    src = "c_compile_error.c",
)

check_build_and_test(
    name = "with_substr_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr("for c_compile_error.c"),
)

check_build_and_test(
    name = "with_basic_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_basic_regex(r"for[[:space:]]c_compile_error\.\(c\|C\)"),
)

check_build_and_test(
    name = "with_extended_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_extended_regex(r"for[[:space:]]c_compile_error\.(c|C)"),
)

build_test(
    name = "build_test",
    targets = [
        ":plain",
        ":with_substr_matcher",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)
