load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//lang/cc:defs.bzl", "cc_build_error")
load("//matcher:defs.bzl", "matcher")

cc_library(
    name = "library",
    srcs = ["library.c"],
    hdrs = ["library.h"],
)

cc_build_error(
    name = "plain",
    src = "c_link_error.c",
    deps = [":library"],
)

cc_build_error(
    name = "with_substr_matcher",
    src = "c_link_error.c",
    link_stderr = matcher.has_substr("FunctionWithoutDefinition"),
    deps = [":library"],
)

cc_build_error(
    name = "with_substr_matcher_ignoring_case",
    src = "c_link_error.c",
    link_stderr = matcher.has_substr_ignoring_case("functionwithoutdefinition"),
    deps = [":library"],
)

cc_build_error(
    name = "with_basic_regex_matcher",
    src = "c_link_error.c",
    link_stderr = matcher.contains_basic_regex(r"undefined.*FunctionWithoutDefinition"),
    deps = [":library"],
)

cc_build_error(
    name = "with_extended_regex_matcher",
    src = "c_link_error.c",
    link_stderr = matcher.contains_extended_regex(r"undefined.*FunctionWithoutDefinition"),
    deps = [":library"],
)

build_test(
    name = "build_test",
    targets = [
        ":plain",
        ":with_substr_matcher",
        ":with_substr_matcher_ignoring_case",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)
