load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//matcher:defs.bzl", "matcher")
load("//tests/cc:utils.bzl", "check_build_and_test")

cc_library(
    name = "library",
    srcs = ["library.c"],
    hdrs = ["library.h"],
)

check_build_and_test(
    name = "plain",
    src = "c_link_error.c",
    deps = [":library"],
)

check_build_and_test(
    name = "with_substr_matcher",
    src = "c_link_error.c",
    link_stderr = matcher.has_substr("FunctionWithoutDefinition"),
    deps = [":library"],
)

check_build_and_test(
    name = "with_basic_regex_matcher",
    src = "c_link_error.c",
    link_stderr = matcher.contains_basic_regex(r"undefined.*FunctionWithoutDefinition"),
    deps = [":library"],
)

check_build_and_test(
    name = "with_extended_regex_matcher",
    src = "c_link_error.c",
    link_stderr = matcher.contains_extended_regex(r"undefined.*FunctionWithoutDefinition"),
    deps = [":library"],
)

build_test(
    name = "build_test",
    targets = [
        ":plain",
        ":with_substr_matcher",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)
