load("//lang/cc:defs.bzl", "cc_build_error")
load("//matcher:defs.bzl", "matcher")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

cc_library(
    name = "library",
    srcs = ["library.cpp"],
    hdrs = ["library.hpp"],
)

cc_build_error(
    name = "plain",
    src = "cpp_compile_error.cpp",
    deps = [":library"],
)

cc_build_error(
    name = "with_substr_matcher",
    src = "cpp_compile_error.cpp",
    compile_stderr = matcher.has_substr("requires single argument"),
    deps = [":library"],
)

cc_build_error(
    name = "with_basic_regex_matcher",
    src = "cpp_compile_error.cpp",
    compile_stderr = matcher.contains_basic_regex("requires single argument.*argument"),
    deps = [":library"],
)

cc_build_error(
    name = "with_extended_regex_matcher",
    src = "cpp_compile_error.cpp",
    compile_stderr = matcher.contains_extended_regex("requires single argument.*argument"),
    deps = [":library"],
)

build_test(
    name = "build_test",
    targets = [
        ":plain",
        ":with_substr_matcher",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)
