load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//matcher:defs.bzl", "matcher")
load("//tests/cc:utils.bzl", "check_build_and_test")

check_build_and_test(
    name = "plain",
    src = "cpp_link_error.cpp",
)

check_build_and_test(
    name = "with_substr_matcher",
    src = "cpp_link_error.cpp",
    link_stderr = matcher.has_substr("GetReturnValue"),
)

check_build_and_test(
    name = "with_basic_regex_matcher",
    src = "cpp_link_error.cpp",
    link_stderr = matcher.contains_basic_regex(r"undefined.*GetReturnValue"),
)

check_build_and_test(
    name = "with_extended_regex_matcher",
    src = "cpp_link_error.cpp",
    link_stderr = matcher.contains_extended_regex(r"undefined.*GetReturnValue"),
)

build_test(
    name = "build_test",
    targets = [
        ":plain",
        ":with_substr_matcher",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)
